# kapi

./: .dir-locals.el  .ghci  .gitignore  Api.Xandar.imports  Data.AesonBson.imports  Makefile  Persistence.Users.Xandar.imports  README.org  Types.Common.imports  Types.Xandar.imports  default.nix  docs.md  kapi.cabal  kapi.nix  stack.yaml
app/: Main.hs
config/: default.json
queries/: elasticsearch.dask.rc  elasticsearch.http  elasticsearch.rc  lono-users.http  xandar-feeds.http  xandar-feeds.rc  xandar-post-queries.http  xandar-posts.http  xandar-posts.rc  xandar-subscriptions.http  xandar-subscriptions.rc  xandar-tags.http  xandar-user-posts.http  xandar-user-posts.rc  xandar-users.http  xandar-users.rc
scripts/: update-date.js
src/Api/: Common.hs  Documentation.hs  Lono.hs  Main.hs  Xandar.hs
src/Data/: AesonBson.hs
src/Data/AesonBson/: Instances.hs
src/Doc/: Xandar.hs
src/Handlers/: Common.hs  Lono.hs  Main.hs  Xandar.hs
src/Handlers/RssReaders/: Feeds.hs  Subscriptions.hs  UserPosts.hs
src/Handlers/Users/: Xandar.hs
src/Handlers/Xandar/: Common.hs  Feeds.hs  Subscriptions.hs  UserPosts.hs  Users.hs  Xandar.hs
src/Parsers/: Filter.hs  Unescape.hs
src/Persistence/: Common.hs  ElasticSearch.hs  Facade.hs  MongoDB.hs
src/Persistence/Lono/: Common.hs
src/Persistence/RssReaders/: Common.hs  Subscriptions.hs  UserPosts.hs
src/Persistence/Users/: Xandar.hs
src/Persistence/Xandar/: Common.hs  FeedSubscriptions.hs  Feeds.hs  Posts.hs  Subscriptions.hs  UserPosts.hs  Users.hs
src/Types/: Common.hs  Xandar.hs
src/Util/: Constants.hs  Error.hs
support/: user-post-model.json
test/: ElasticSearchSetup.hs  ParsersFilterSpec.hs  PersistenceCommonSpec.hs  PersistenceElasticSearchSpec.hs  PersistenceMongoDBSpec.hs  PersistenceSubscriptionsSpec.hs  PersistenceUserPostsSpec.hs  PersistenceXandarUserPostsSpec.hs  Spec.hs  TestHelper.hs  TypesCommonSpec.hs
test/Mocks/: Common.hs
test/data/: user-posts.json
