name:                kapi
version:             0.1.0.0
synopsis:            Rest api server
description:         Please see README.org
homepage:            https://github.com/gabesoft/kapi#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Adomnicai
maintainer:          gabesoft@gmail.com
copyright:           2016 Gabriel Adomnicai
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api.Common
                     , Api.Xandar
                     , Data.AesonBson
                     , Data.AesonBson.Instances
                     , Handlers.Xandar.Common
                     , Handlers.Xandar.Subscriptions
                     , Handlers.Xandar.UserPosts
                     , Handlers.Xandar.Xandar
                     , Parsers.Filter
                     , Parsers.Unescape
                     , Persistence.Common
                     , Persistence.Facade
                     , Persistence.MongoDB
                     , Persistence.ElasticSearch
                     , Persistence.Xandar.Common
                     , Persistence.Xandar.Subscriptions
                     , Persistence.Xandar.UserPosts
                     , Types.Common
                     , Util.Constants
                     , Util.Error
  build-depends:       base >= 4.7 && < 5
                     , base-compat >= 0.9
                     , aeson >= 1.0.2
                     , attoparsec >= 0.13
                     , bloodhound >= 0.12
                     , bson
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , exceptions >= 0.8
                     , http-client >= 0.5
                     , http-types >= 0.9
                     , iso8601-time
                     , lifted-base >= 0.2
                     , monad-control >= 1.0
                     , mongoDB >= 2.1
                     , mtl >= 2.2
                     , network >= 2.6
                     , SHA
                     , scientific >= 0.3
                     , servant >= 0.9
                     , servant-server >= 0.9
                     , servant-docs >= 0.9
                     , text >= 1.2
                     , time >= 1.6
                     , transformers-base >= 0.4
                     , unordered-containers >= 0.2
                     , vector >= 0.11
  ghc-options:         -Wall
  default-language:    Haskell2010

executable kapi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kapi
                     , containers >= 0.5
                     , wai >= 3.2
                     , wai-extra >= 3.0
                     , warp >= 3.2
  default-language:    Haskell2010

test-suite persistence-common-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PersistenceCommonSpec.hs
  other-modules:       Mocks.Common
                     , TestHelper
  build-depends:       base
                     , bson
                     , containers >= 0.5
                     , hspec
                     , iso8601-time >= 0.1
                     , kapi
                     , QuickCheck >= 2.8
                     , quickcheck-text >= 0.1
                     , text
                     , time >= 1.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite persistence-mongodb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PersistenceMongoDBSpec.hs
  other-modules:       Mocks.Common
                     , TestHelper
  build-depends:       base
                     , bson
                     , containers >= 0.5
                     , hspec
                     , hspec-core >= 2.3
                     , iso8601-time >= 0.1
                     , kapi
                     , QuickCheck >= 2.8
                     , quickcheck-text >= 0.1
                     , text
                     , time >= 1.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite persistence-user-posts-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PersistenceUserPostsSpec.hs
  other-modules:       Mocks.Common
                     , TestHelper
  build-depends:       base
                     , bloodhound >= 0.12
                     , bson
                     , containers >= 0.5
                     , hspec
                     , hspec-core >= 2.3
                     , http-types >= 0.9
                     , iso8601-time >= 0.1
                     , kapi
                     , QuickCheck >= 2.8
                     , quickcheck-text >= 0.1
                     , text
                     , time >= 1.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite persistence-subscriptions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PersistenceSubscriptionsSpec.hs
  other-modules:       Mocks.Common
                     , TestHelper
  build-depends:       base
                     , bloodhound >= 0.12
                     , bson
                     , containers >= 0.5
                     , hspec
                     , hspec-core >= 2.3
                     , http-types >= 0.9
                     , iso8601-time >= 0.1
                     , kapi
                     , QuickCheck >= 2.8
                     , quickcheck-text >= 0.1
                     , text
                     , time >= 1.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite persistence-elasticsearch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             PersistenceElasticSearchSpec.hs
  other-modules:       Mocks.Common
                     , TestHelper
                     , ElasticSearchSetup
  build-depends:       base
                     , bloodhound
                     , bson
                     , containers >= 0.5
                     , hspec
                     , hspec-core >= 2.3
                     , iso8601-time >= 0.1
                     , kapi
                     , QuickCheck >= 2.8
                     , quickcheck-text >= 0.1
                     , text
                     , time >= 1.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite parsers-filter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ParsersFilterSpec.hs
  other-modules:       Mocks.Common
                     , TestHelper
  build-depends:       base
                     , bson
                     , containers >= 0.5
                     , hspec
                     , hspec-core >= 2.3
                     , iso8601-time >= 0.1
                     , kapi
                     , QuickCheck >= 2.8
                     , quickcheck-text >= 0.1
                     , text
                     , time >= 1.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gabesoft/kapi
